share/remf-create-env-terraform/remf/k8s/apps/guestbook/guestbook-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
  namespace: apps
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: guestbook-ui
